# OpenSteamTool-Manager

./: README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
OpenSteamTool.Manager/: OpenSteamTool.Manager.csproj
OpenSteamTool.Manager/Helpers/: AppControlService.cs  AppServices.cs  CdnService.cs  DialogService.cs  IAppControlService.cs  IDialogService.cs
OpenSteamTool.Manager/Models/: CdnModels.cs  GameResourceModels.cs  ManagerModels.cs  ManagerSettings.cs  UpdateCheckResult.cs  UpdateModels.cs
OpenSteamTool.Manager/Payload/: README.md
OpenSteamTool.Manager/Services/: ConnectivityTestService.cs  GamePackageInstallService.cs  GitHubDnsService.cs  GitHubGamePackageService.cs  GitHubHttpService.cs  LuaGameConfigService.cs  ManagerSettingsService.cs  StatusService.cs  SteamGameLibraryService.cs  UpdateService.cs
OpenSteamTool.Manager/ViewModels/: MainViewModel.cs
OpenSteamTool.Manager/Views/: MainWindow.xaml  SecretPromptWindow.xaml  TextPromptWindow.xaml
cdn/: README.md  update.json
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  manager.rs
src-tauri/tests/: manager_tests.rs
