[package]
name = "g-opensteamtool"
version = "0.2.0"
description = "G-OpenSteamTool desktop manager"
edition = "2021"

[lib]
name = "g_opensteamtool"
path = "src/lib.rs"

[[bin]]
name = "g-opensteamtool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
toml = "0.8"
walkdir = "2"
winreg = "0.55"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Registry"
] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
hickory-resolver = { version = "0.26", features = ["tls-ring", "webpki-roots"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }

[dev-dependencies]
tempfile = "3"
